<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    android:id="@+id/activity_main"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="Вход"
        android:textColor="@color/orange"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143" />

    <EditText
            android:id="@+id/email_entry"
            android:paddingStart="18dp"
            android:layout_width="330dp"
            android:layout_height="62dp"
            android:background="@drawable/rectangle"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/grey"
            android:textColorHint="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_text"
            app:layout_constraintVertical_bias="0.050000012" />

    <EditText
        android:id="@+id/password_entry"
        android:layout_width="330dp"
        android:layout_height="62dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColor="@color/grey"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_entry"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonEntry"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_entry"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/entry"
        android:textAllCaps="false"
        android:textColor="@color/grey"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_entry"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/forgot_password"
        android:textColor="@color/grey"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password_entry"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/buttonEntry"
        app:layout_constraintTop_toBottomOf="@+id/password_entry"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_google"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:background="@drawable/google_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEntry" />

    <Button
        android:id="@+id/button_twitter"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:background="@drawable/twitter_logo"
        app:layout_constraintEnd_toStartOf="@+id/button_facebook"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toEndOf="@+id/button_google"
        app:layout_constraintTop_toBottomOf="@+id/buttonEntry" />

    <Button
        android:id="@+id/button_facebook"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:background="@drawable/facebook_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEntry" />

    <TextView
        android:id="@+id/not_have_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/not_have_acc"
        android:textColor="@color/grey"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_google"
        app:layout_constraintVertical_bias="0.736" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/register"
        android:textColor="@color/orange"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toEndOf="@+id/not_have_acc"
        app:layout_constraintTop_toBottomOf="@+id/button_google"
        app:layout_constraintVertical_bias="0.744" />

    <ImageButton
        android:id="@+id/arrow_left"
        android:layout_width="39dp"
        android:layout_height="39dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

</androidx.constraintlayout.widget.ConstraintLayout>